classDiagram
    class APIRequest {
        +string file_path
        +string file_content
    }

    class FileAnalysis {
        +string file_path
        +FileType file_type
        +int total_lines
        +int code_lines
        +int comment_lines
        +int blank_lines
        +List~CodeElement~ elements
        +List~string~ imports
    }

    class CodeElement {
        +string name
        +string type
        +int line_start
        +int line_end
        +string docstring
        +List~string~ parameters
        +string return_type
    }

    class CostMetrics {
        +int input_tokens
        +int output_tokens
        +int total_tokens
        +float input_cost
        +float output_cost
        +float total_cost
        +datetime timestamp
    }

    class DocumentationResult {
        +string request_id
        +string file_path
        +ProcessingStatus status
        +string documentation
        +FileAnalysis analysis
        +float total_cost
        +int total_tokens
        +float processing_time_seconds
        +bool cached
        +datetime timestamp
    }

    class APIResponse {
        +bool success
        +DocumentationResult data
        +string message
        +CostMetrics cost_metrics
    }

    APIRequest --> FileAnalysis : analyzes to
    FileAnalysis *-- CodeElement : contains
    FileAnalysis --> DocumentationResult : included in
    CostMetrics --> DocumentationResult : tracked in
    DocumentationResult --> APIResponse : wrapped in

    note for APIRequest "Input from client\nContains raw Python code"
    note for FileAnalysis "AST analysis results\nStructural information"
    note for CostMetrics "Token usage and costs\nPer API call"
    note for DocumentationResult "Complete result\nReturned to client"
